src/OcctNative/OcctNative.h

    struct OcctPoint3d { double x; double y; double z; };
    struct OcctVector3d { double x; double y; double z; };
    struct OcctCameraState { OcctPoint3d eye; OcctPoint3d center; OcctVector3d up; OcctVector3d direction; double scale; };
    struct OcctUvBounds { double uMin; double uMax; double vMin; double vMax; };
    OCCTBRIDGE_API int occt_get_camera(OcctHandle handle, OcctCameraState* result);
    OCCTBRIDGE_API int occt_set_camera(OcctHandle handle, const OcctCameraState* state);
    OCCTBRIDGE_API double occt_get_view_scale(OcctHandle handle);
    OCCTBRIDGE_API int occt_set_view_scale(OcctHandle handle, double scale);
    OCCTBRIDGE_API int occt_set_antialiasing(OcctHandle handle, int enabled);
    OCCTBRIDGE_API int occt_set_gradient_background(OcctHandle handle, double r1, double g1, double b1, double r2, double g2, double b2, int fillMethod);
    OCCTBRIDGE_API int occt_show_all(OcctHandle handle);
    OCCTBRIDGE_API int occt_hide_all(OcctHandle handle);
    OCCTBRIDGE_API int occt_redisplay_object(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_highlight_object(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_unhighlight_object(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API OcctObjectId occt_copy_selected_subshape(OcctHandle handle);
    OCCTBRIDGE_API OcctObjectId occt_copy_selected_subshape_at(OcctHandle handle, int index);
    OCCTBRIDGE_API std::int64_t occt_shape_hash(OcctHandle handle, OcctObjectId shapeId);
    OCCTBRIDGE_API int occt_vertex_point(OcctHandle handle, OcctObjectId vertexId, OcctPoint3d* result);
    OCCTBRIDGE_API int occt_edge_endpoints(OcctHandle handle, OcctObjectId edgeId, OcctPoint3d* start, OcctPoint3d* end);
    OCCTBRIDGE_API int occt_edge_point_at(OcctHandle handle, OcctObjectId edgeId, double normalizedParameter, OcctPoint3d* point, OcctVector3d* tangent);
    OCCTBRIDGE_API int occt_edge_curve_type(OcctHandle handle, OcctObjectId edgeId);
    OCCTBRIDGE_API int occt_face_surface_type(OcctHandle handle, OcctObjectId faceId);
    OCCTBRIDGE_API int occt_face_uv_bounds(OcctHandle handle, OcctObjectId faceId, OcctUvBounds* result);
    OCCTBRIDGE_API int occt_face_point_normal(OcctHandle handle, OcctObjectId faceId, double u, double v, OcctPoint3d* point, OcctVector3d* normal);
    OCCTBRIDGE_API OcctObjectId occt_make_arc_center(OcctHandle handle, OcctPoint3d center, OcctVector3d normal, OcctVector3d xDirection, double radius, double startAngleDegrees, double endAngleDegrees);
    OCCTBRIDGE_API OcctObjectId occt_make_regular_polygon(OcctHandle handle, OcctPoint3d center, OcctVector3d normal, OcctVector3d xDirection, double radius, int sideCount, int makeFace);
    OCCTBRIDGE_API OcctObjectId occt_fillet_edges(OcctHandle handle, OcctObjectId shapeId, const int* edgeIndices, int count, double radius, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_chamfer_edges(OcctHandle handle, OcctObjectId shapeId, const int* edgeIndices, int count, double distance, int hideInput);
    // Compatibility aliases retained for v1-v4 callers.
    OCCTBRIDGE_API int occt_set_shape_color(OcctHandle handle, OcctObjectId shapeId, double r, double g, double b);
    OCCTBRIDGE_API int occt_set_shape_transparency(OcctHandle handle, OcctObjectId shapeId, double transparency);
    OCCTBRIDGE_API int occt_set_shape_visible(OcctHandle handle, OcctObjectId shapeId, int visible);
    OCCTBRIDGE_API int occt_delete_shape(OcctHandle handle, OcctObjectId shapeId);
    OCCTBRIDGE_API int occt_shape_count(OcctHandle handle);